Added username filter into Users/Search Endpoint
