# internal/adapters/chi-server/handlers/users/requests/user.go
@@ -6,5 +6,6 @@ type CreateUserRequest struct {
 }
 
 type SearchUserRequest struct {
-	Email string `json:"email" validate:"required,email,max=255"`
+	Username string `json:"username" validate:"omitempty,min=3,max=255"`
+	Email    string `json:"email" validate:"omitempty,email,max=255"`
 }
